--- a/nic.html
+++ b/nic.html
@@ -14,7 +14,7 @@
     .logo {
       width: 100px;
       height: 100px;
-      background-image: url('tiktok-logo.png');
+      background-image: url('logo_tiktok.png');
       background-size: cover;
       animation: rotate 2s linear infinite;
     }
